# iCloud-Photo-Reducer

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml  run.sh
photo_reducer/: cli.py  cluster.py  db.py  export.py  finalize.py  propose.py  review.py  scan.py  status.py
