[project]
name = "photo-reducer"
version = "0.1.0"
description = "Finds near-duplicate photo/video moments in the macOS Photos library and helps archive them to free up iCloud space"
requires-python = ">=3.11"
dependencies = [
    "osxphotos>=0.68.0",
    "photoscript>=0.2.0",
    "imagehash>=4.3.1",
    "pillow>=10.0.0",
]

[project.scripts]
photo-reducer = "photo_reducer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["photo_reducer"]
